--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html, body {
 body {
     font-family: 'Montesserat', sans-serif;
     background-color: #41B3A3;
-    margin: 0;
+    margin-top: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -24,25 +24,47 @@ body {
     width: 400px;
     display: flex;
     flex-direction: column;
+    background-color: black;
+    border-radius: 30px;
+    padding: 20px;
+    gap: 12px;
 }
 
 .display {
-    height: 100px;
-    width: 400px;
+    height: 120px;
+    width: 360px;
+    background-color: #3B3B3B;
+    border-radius: 24px;
+    box-shadow: inset 2px 3px 5px 0px rgb(0 0 0 / 70%);
 }
 
 .buttons {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    flex-wrap: wrap-reverse;
+    justify-content: space-evenly;
     align-items: center;
-    height: 500px;
-    width: 400px;
+    height: 440px;
+    width: 360px;
+}
+
+.clears {
+    display: flex;
+    justify-content: space-evenly;
+    width: 360px;
 }
 
 .btn {
     font-family: inherit;
-    height: 60px;
-    width: 60px;
+    font-size: 28px;
+    height: 81px;
+    width: 81px;
     border-radius: 50%;
+}
+
+#clear,
+#back {
+    border-radius: 30px;
+    width: 168px;
+    height: 65px;
 }
