--- a/style.css
+++ b/style.css
@@ -36,6 +36,23 @@ body {
     background-color: #3B3B3B;
     border-radius: 24px;
     box-shadow: inset 2px 3px 5px 0px rgb(0 0 0 / 70%);
+    border: 3px solid navajowhite;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding: 20px;
+    text-align: right;
+    color: navajowhite;
+}
+
+.docked {
+    font-size: 20px;
+    height: 25px;
+}
+
+.staged {
+    font-size: 40px;
+    height: 50px;
 }
 
 .buttons {
@@ -60,6 +77,8 @@ body {
     height: 81px;
     width: 81px;
     border-radius: 50%;
+    background-color: #3B3B3B;
+    color: navajowhite
 }
 
 #clear,
